--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,15 @@
     {% endif %}
   </head>
   <body>
-    <div><a href="/">Home</a> | <a href="/now_playing">Now playing on 6</a> | <a href="/tarot">Tarot</a> </div>
+
+    <div>Microblog:
+        <a href="{{ url_for('index') }}">Home</a>
+        {% if g.user.is_authenticated %}
+        | <a href="{{ url_for('logout') }}">Logout</a>
+        {% endif %}
+        | <a href="/now_playing">Now playing on 6</a> 
+        | <a href="/tarot">Tarot</a>
+    </div>
     <hr>
     {% with messages = get_flashed_messages() %}
       {% if messages %}
